Added create and update affiliate as well
